@@ -1304,6 +1304,15 @@ let subset cmp l l' = for_all (fun x -> mem_cmp cmp x l') l
   subset Pervasives.compare [1;2] [1;2;3] = true
 *)
 
+let shuffle ?state:(s = Random.get_state ()) l =
+  let a = BatInnerShuffle.array_shuffle ~state:s (Array.of_list l) in
+  Array.to_list a
+(*$T shuffle
+  let s = Random.State.make [|11|] in \
+  shuffle ~state:s [1;2;3;4;5;6;7;8;9] = [7; 2; 9; 5; 3; 6; 4; 1; 8]
+  shuffle [] = []
+*)
+
 module Exceptionless = struct
   let rfind p l =
     try  Some (rfind p l)
