@@ -106,14 +106,7 @@ let multi_choice n e =
 
 let shuffle e =
   let a = BatArray.of_enum e in
-  for n = Array.length a - 1 downto 1 do
-    let k    = int ( n + 1 ) in
-    if k <> n then
-      let buf  = Array.get a n in
-      Array.set a n (Array.get a k);
-      Array.set a k buf
-  done;
-  a
+  BatInnerShuffle.array_shuffle a
 
 let get_state = Random.get_state
 let set_state = Random.set_state
